#1682: Fix widths so there will never be horizontal scrollbars (#1683)

--- a/src/devTools/editor/tabs/editTab/editorNode/EditorNode.module.scss
+++ b/src/devTools/editor/tabs/editTab/editorNode/EditorNode.module.scss
@@ -95,15 +95,18 @@
   vertical-align: top;
   margin-bottom: 0.25rem;
   max-width: 120px;
+  overflow-x: hidden;
+  text-overflow: ellipsis;
 }
 
 .outputKey {
   font-family: monospace;
-  overflow-x: auto;
+  max-width: 120px;
+  overflow-x: hidden;
+  text-overflow: ellipsis;
   text-align: center;
   vertical-align: top;
   margin-top: 0.25rem;
-  max-width: 120px;
 }
 
 .addRightMargin {
