--- a/src/devTools/editor/tabs/editTab/editorNodeLayout/EditorNodeLayout.module.scss
+++ b/src/devTools/editor/tabs/editTab/editorNodeLayout/EditorNodeLayout.module.scss
@@ -16,11 +16,9 @@
  */
 
 .root {
-  width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
+  align-items: stretch;
   padding-bottom: 6px;
 }
 
